--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
 
   <!-- Button to Generate QR Code -->
   <button id="submit-btn" onclick="updateQRCodeOnSubmit()">Generate QR Code</button>
-
+  <!-- This is the button for clear all-->
+  <button id="clear-all-btn" onclick="ClearAll()">Clear All</button>
   <!-- QR Code Popup -->
   <div id="popupQR" class="popup">
     <div id="qr-code-popup"></div>
