--- a/index.html
+++ b/index.html
@@ -239,5 +239,12 @@
     <div id="qr-code-popup"></div>
     <button id="close-popup" onclick="closePopupQR()">Close</button>
   </div>
+  <!-- popup wrong panel-->
+   <div id="popup" class="popup">
+    <div class="popup-content">
+      <span class="close" onclick="closePopup()">&times;</span>
+      <p>Team Number Typed Wrong!</p>
+    </div>
+   </div>
 </body>
 </html>
