--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
     <button id="close-popup" onclick="closePopupQR()">Close</button>
   </div>
   <!-- popup wrong panel-->
-   <div id="popup" class="popup">
+<!--    <div id="popup" class="popup">
     <div class="popup-content">
       <span class="close" onclick="closePopup()">&times;</span>
       <p>Team Number Typed Wrong!</p>
     </div>
-   </div>
+   </div> -->
 </body>
 </html>
