--- a/index.html
+++ b/index.html
@@ -240,5 +240,6 @@
     <button id="close-popup" onclick="closePopupQR()">Close</button>
   </div>
   <!-- popup wrong panel-->
+</div>
 </body>
 </html>
