--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <button onclick="updateButtonNum('ProcessorScored_Auto', 1)">+</button>
       </div>
       <div class="mini-box">
-        <h3>Processor Scored</h3>
+        <h3>Processor Missed</h3>
         <button onclick="updateButtonNum('ProcessorMissed_Auto', -1)">-</button>
         <span id="ProcessorMissed_Auto">0</span>
         <button onclick="updateButtonNum('ProcessorMissed_Auto', 1)">+</button>
