--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       <h2>Prematch</h2>
       <div class="mini-box">
         <h3>SCOUTER INITIALS</h3>
-        <input type="text" id="prematch-scout-initials" placeholder="Required">
+        <input type="text" id="prematch-scout-initials" placeholder="Required" style="width: 92%;">
       </div>
       <div class="mini-box">
         <h3>MATCH NUMBER</h3>
-        <input type="number" id="prematch-match-number" placeholder="Required">
+        <input type="number" id="prematch-match-number" placeholder="Required" style="width: 92%;">
       </div>
       <div class="mini-box">
         <h3>TEAM NUMBER</h3>
-        <input type="number" id="prematch-team-number" placeholder="Required">
+        <input type="number" id="prematch-team-number" placeholder="Required" style="width: 92%;">
       </div>
       <div class="mini-box">
         <h3>ROBOT TYPE</h3>
-        <select id="prematch-robot">
+        <select id="prematch-robot" style="width: 98%;">
           <option value="Choose_Answer">Choose Answer</option>
           <option value="Red_1">Red 1</option>
           <option value="Red_2">Red 2</option>
@@ -222,27 +222,29 @@
       <h2>Endgame</h2>
       <div class="mini-box">
         <h3>END POSITION</h3>
-        <select id="climbed">
+        <select id="climbed" style="width: 98%;">
           <option value="Choose_Answer">Choose Answer</option>
-          <option value="Parked">Parked</option>
           <option value="No_Cage">No Cage</option>
+          <option value="Parked">Parked</option>
           <option value="Shallow_Cage">Shallow Cage</option>
           <option value="Deep_Cage">Deep Cage</option>
         </select>
       </div>
       <div class="mini-box">
         <h3>Speed</h3>
-        <input type="number" id="speed" value="0">
+        <select id="speed" style="width: 98%;">
+          <option value="0">0</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
       </div>
       <div class="mini-box">
         <h3>Tipped During Match?</h3>
         <input type="checkbox" class="custom-checkbox" id="Tipped-During-Match">
         <label for="Tipped-During-Match"></label>
-      </div>
-      <div class="mini-box">
-        <h3>Defense During Match?</h3>
-        <input type="checkbox" class="custom-checkbox" id="Defense-During-Match">
-        <label for="Defense-During-Match"></label>
       </div>
     </div>
 
